-- ============================================================
-- GOLD — Dimension tables
-- ============================================================

-- ---------- dim_date ----------
DROP TABLE IF EXISTS gold.dim_date CASCADE;
CREATE TABLE gold.dim_date (
    date_sk       INTEGER PRIMARY KEY,  -- YYYYMMDD
    full_date     DATE NOT NULL UNIQUE,
    year          SMALLINT NOT NULL,
    quarter       SMALLINT NOT NULL,
    month         SMALLINT NOT NULL,
    month_name    VARCHAR(16) NOT NULL,
    day_of_month  SMALLINT NOT NULL,
    day_of_week   SMALLINT NOT NULL,    -- 1=Mon .. 7=Sun (ISO)
    day_name      VARCHAR(16) NOT NULL,
    week_of_year  SMALLINT NOT NULL,
    year_month    CHAR(7) NOT NULL,     -- YYYY-MM
    is_weekend    BOOLEAN NOT NULL
);

-- Generate calendar 2016-01-01 .. 2019-12-31
INSERT INTO gold.dim_date (
    date_sk, full_date, year, quarter, month, month_name,
    day_of_month, day_of_week, day_name, week_of_year, year_month, is_weekend
)
SELECT
    TO_CHAR(d, 'YYYYMMDD')::INTEGER,
    d,
    EXTRACT(YEAR FROM d)::SMALLINT,
    EXTRACT(QUARTER FROM d)::SMALLINT,
    EXTRACT(MONTH FROM d)::SMALLINT,
    TRIM(TO_CHAR(d, 'Month')),
    EXTRACT(DAY FROM d)::SMALLINT,
    EXTRACT(ISODOW FROM d)::SMALLINT,
    TRIM(TO_CHAR(d, 'Day')),
    EXTRACT(WEEK FROM d)::SMALLINT,
    TO_CHAR(d, 'YYYY-MM'),
    EXTRACT(ISODOW FROM d) IN (6, 7)
FROM generate_series('2016-01-01'::DATE, '2019-12-31'::DATE, '1 day') AS d;

-- Unknown date member
INSERT INTO gold.dim_date VALUES (
    -1, '1900-01-01', 1900, 1, 1, 'Unknown', 1, 1, 'Unknown', 1, '1900-01', FALSE
);

-- ---------- dim_order_status ----------
DROP TABLE IF EXISTS gold.dim_order_status CASCADE;
CREATE TABLE gold.dim_order_status (
    order_status_sk INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    order_status    VARCHAR(32) NOT NULL UNIQUE,
    sort_order      SMALLINT NOT NULL,
    is_success      BOOLEAN NOT NULL DEFAULT FALSE,
    is_terminal     BOOLEAN NOT NULL DEFAULT FALSE
);

INSERT INTO gold.dim_order_status (order_status_sk, order_status, sort_order, is_success, is_terminal) VALUES
    (-1, 'unknown',     0, FALSE, FALSE),
    (1,  'created',     1, FALSE, FALSE),
    (2,  'approved',    2, FALSE, FALSE),
    (3,  'invoiced',    3, FALSE, FALSE),
    (4,  'processing',  4, FALSE, FALSE),
    (5,  'shipped',     5, FALSE, FALSE),
    (6,  'delivered',   6, TRUE,  TRUE),
    (7,  'canceled',    7, FALSE, TRUE),
    (8,  'unavailable', 8, FALSE, TRUE);

-- ---------- dim_payment_type ----------
DROP TABLE IF EXISTS gold.dim_payment_type CASCADE;
CREATE TABLE gold.dim_payment_type (
    payment_type_sk INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    payment_type    VARCHAR(32) NOT NULL UNIQUE,
    payment_group   VARCHAR(32) NOT NULL
);

INSERT INTO gold.dim_payment_type (payment_type_sk, payment_type, payment_group) VALUES
    (-1, 'unknown',      'unknown'),
    (1,  'credit_card',  'card'),
    (2,  'debit_card',   'card'),
    (3,  'boleto',       'cash_like'),
    (4,  'voucher',      'voucher'),
    (5,  'not_defined',  'unknown');

-- ---------- dim_geography ----------
DROP TABLE IF EXISTS gold.dim_geography CASCADE;
CREATE TABLE gold.dim_geography (
    geo_sk          INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    zip_code_prefix VARCHAR(8) NOT NULL,
    city            VARCHAR(128),
    state           CHAR(2),
    region          VARCHAR(32),
    latitude        DOUBLE PRECISION,
    longitude       DOUBLE PRECISION,
    CONSTRAINT uq_geo_zip UNIQUE (zip_code_prefix)
);

-- Unknown member
INSERT INTO gold.dim_geography (geo_sk, zip_code_prefix, city, state, region, latitude, longitude)
VALUES (-1, '00000', 'Unknown', 'XX', 'Unknown', NULL, NULL);

-- Load from bronze geolocation (aggregate multi lat/lng per zip)
INSERT INTO gold.dim_geography (zip_code_prefix, city, state, region, latitude, longitude)
SELECT
    LPAD(REGEXP_REPLACE(geolocation_zip_code_prefix, '[^0-9]', '', 'g'), 5, '0') AS zip_code_prefix,
    LOWER(TRIM(MAX(geolocation_city))) AS city,
    UPPER(TRIM(MAX(geolocation_state))) AS state,
    CASE UPPER(TRIM(MAX(geolocation_state)))
        WHEN 'AC' THEN 'North' WHEN 'AM' THEN 'North' WHEN 'AP' THEN 'North'
        WHEN 'PA' THEN 'North' WHEN 'RO' THEN 'North' WHEN 'RR' THEN 'North'
        WHEN 'TO' THEN 'North'
        WHEN 'AL' THEN 'Northeast' WHEN 'BA' THEN 'Northeast' WHEN 'CE' THEN 'Northeast'
        WHEN 'MA' THEN 'Northeast' WHEN 'PB' THEN 'Northeast' WHEN 'PE' THEN 'Northeast'
        WHEN 'PI' THEN 'Northeast' WHEN 'RN' THEN 'Northeast' WHEN 'SE' THEN 'Northeast'
        WHEN 'ES' THEN 'Southeast' WHEN 'MG' THEN 'Southeast' WHEN 'RJ' THEN 'Southeast'
        WHEN 'SP' THEN 'Southeast'
        WHEN 'PR' THEN 'South' WHEN 'RS' THEN 'South' WHEN 'SC' THEN 'South'
        WHEN 'DF' THEN 'Midwest' WHEN 'GO' THEN 'Midwest' WHEN 'MS' THEN 'Midwest'
        WHEN 'MT' THEN 'Midwest'
        ELSE 'Unknown'
    END AS region,
    AVG(geolocation_lat) AS latitude,
    AVG(geolocation_lng) AS longitude
FROM bronze.stg_geolocation
WHERE geolocation_zip_code_prefix IS NOT NULL
GROUP BY LPAD(REGEXP_REPLACE(geolocation_zip_code_prefix, '[^0-9]', '', 'g'), 5, '0')
ON CONFLICT (zip_code_prefix) DO NOTHING;

-- ---------- dim_customer ----------
DROP TABLE IF EXISTS gold.dim_customer CASCADE;
CREATE TABLE gold.dim_customer (
    customer_sk            INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    customer_unique_id     VARCHAR(64) NOT NULL,
    customer_zip_code_prefix VARCHAR(8),
    customer_city          VARCHAR(128),
    customer_state         CHAR(2),
    geo_sk                 INTEGER REFERENCES gold.dim_geography (geo_sk),
    etl_loaded_at          TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_customer_unique UNIQUE (customer_unique_id)
);

INSERT INTO gold.dim_customer (
    customer_sk, customer_unique_id, customer_zip_code_prefix,
    customer_city, customer_state, geo_sk
) VALUES (-1, 'unknown', '00000', 'Unknown', 'XX', -1);

-- One row per customer_unique_id (latest zip/city/state by arbitrary pick)
INSERT INTO gold.dim_customer (
    customer_unique_id, customer_zip_code_prefix, customer_city, customer_state, geo_sk
)
SELECT
    c.customer_unique_id,
    c.zip_pad,
    c.customer_city,
    c.customer_state,
    COALESCE(g.geo_sk, -1)
FROM (
    SELECT DISTINCT ON (customer_unique_id)
        customer_unique_id,
        LPAD(REGEXP_REPLACE(customer_zip_code_prefix, '[^0-9]', '', 'g'), 5, '0') AS zip_pad,
        LOWER(TRIM(customer_city)) AS customer_city,
        UPPER(TRIM(customer_state)) AS customer_state
    FROM bronze.stg_customers
    WHERE customer_unique_id IS NOT NULL
    ORDER BY customer_unique_id, customer_id
) c
LEFT JOIN gold.dim_geography g ON g.zip_code_prefix = c.zip_pad;

-- ---------- dim_seller ----------
DROP TABLE IF EXISTS gold.dim_seller CASCADE;
CREATE TABLE gold.dim_seller (
    seller_sk              INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    seller_id              VARCHAR(64) NOT NULL,
    seller_zip_code_prefix VARCHAR(8),
    seller_city            VARCHAR(128),
    seller_state           CHAR(2),
    geo_sk                 INTEGER REFERENCES gold.dim_geography (geo_sk),
    etl_loaded_at          TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_seller_id UNIQUE (seller_id)
);

INSERT INTO gold.dim_seller (
    seller_sk, seller_id, seller_zip_code_prefix, seller_city, seller_state, geo_sk
) VALUES (-1, 'unknown', '00000', 'Unknown', 'XX', -1);

INSERT INTO gold.dim_seller (
    seller_id, seller_zip_code_prefix, seller_city, seller_state, geo_sk
)
SELECT
    s.seller_id,
    s.zip_pad,
    s.seller_city,
    s.seller_state,
    COALESCE(g.geo_sk, -1)
FROM (
    SELECT
        seller_id,
        LPAD(REGEXP_REPLACE(seller_zip_code_prefix, '[^0-9]', '', 'g'), 5, '0') AS zip_pad,
        LOWER(TRIM(seller_city)) AS seller_city,
        UPPER(TRIM(seller_state)) AS seller_state
    FROM bronze.stg_sellers
) s
LEFT JOIN gold.dim_geography g ON g.zip_code_prefix = s.zip_pad;

-- ---------- dim_product ----------
DROP TABLE IF EXISTS gold.dim_product CASCADE;
CREATE TABLE gold.dim_product (
    product_sk                   INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    product_id                   VARCHAR(64) NOT NULL,
    category_name_pt             VARCHAR(128),
    category_name_en             VARCHAR(128),
    product_name_length          INTEGER,
    product_description_length   INTEGER,
    product_photos_qty           INTEGER,
    product_weight_g             INTEGER,
    product_length_cm            INTEGER,
    product_height_cm            INTEGER,
    product_width_cm             INTEGER,
    volume_cm3                   NUMERIC(18, 2),
    weight_bucket                VARCHAR(16),
    size_bucket                  VARCHAR(16),
    etl_loaded_at                TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_product_id UNIQUE (product_id)
);

INSERT INTO gold.dim_product (product_sk, product_id, category_name_pt, category_name_en)
VALUES (-1, 'unknown', 'unknown', 'unknown');

INSERT INTO gold.dim_product (
    product_id, category_name_pt, category_name_en,
    product_name_length, product_description_length, product_photos_qty,
    product_weight_g, product_length_cm, product_height_cm, product_width_cm,
    volume_cm3, weight_bucket, size_bucket
)
SELECT
    p.product_id,
    COALESCE(NULLIF(TRIM(p.product_category_name), ''), 'unknown'),
    COALESCE(t.product_category_name_english, 'unknown'),
    p.product_name_lenght,
    p.product_description_lenght,
    p.product_photos_qty,
    p.product_weight_g,
    p.product_length_cm,
    p.product_height_cm,
    p.product_width_cm,
    CASE
        WHEN p.product_length_cm IS NOT NULL
         AND p.product_height_cm IS NOT NULL
         AND p.product_width_cm  IS NOT NULL
        THEN (p.product_length_cm::NUMERIC * p.product_height_cm * p.product_width_cm)
        ELSE NULL
    END AS volume_cm3,
    CASE
        WHEN p.product_weight_g IS NULL THEN 'unknown'
        WHEN p.product_weight_g < 500 THEN 'light'
        WHEN p.product_weight_g < 2000 THEN 'medium'
        ELSE 'heavy'
    END AS weight_bucket,
    CASE
        WHEN p.product_length_cm IS NULL OR p.product_height_cm IS NULL OR p.product_width_cm IS NULL THEN 'unknown'
        WHEN (p.product_length_cm::NUMERIC * p.product_height_cm * p.product_width_cm) < 2000 THEN 'small'
        WHEN (p.product_length_cm::NUMERIC * p.product_height_cm * p.product_width_cm) < 15000 THEN 'medium'
        ELSE 'large'
    END AS size_bucket
FROM bronze.stg_products p
LEFT JOIN bronze.stg_category_translation t
    ON TRIM(p.product_category_name) = TRIM(t.product_category_name);
