-- ============================================================
-- GOLD — Fact tables
-- Requires: dimensions loaded + bronze staging populated
-- ============================================================

-- Helper view: map order_id → customer_unique_id → customer_sk
CREATE OR REPLACE VIEW gold.vw_order_customer_map AS
SELECT
    o.order_id,
    o.customer_id,
    o.order_status,
    o.order_purchase_timestamp,
    o.order_approved_at,
    o.order_delivered_carrier_date,
    o.order_delivered_customer_date,
    o.order_estimated_delivery_date,
    c.customer_unique_id,
    COALESCE(dc.customer_sk, -1) AS customer_sk,
    COALESCE(dos.order_status_sk, -1) AS order_status_sk
FROM bronze.stg_orders o
LEFT JOIN bronze.stg_customers c ON o.customer_id = c.customer_id
LEFT JOIN gold.dim_customer dc ON c.customer_unique_id = dc.customer_unique_id
LEFT JOIN gold.dim_order_status dos ON o.order_status = dos.order_status;

-- ---------- fact_order ----------
DROP TABLE IF EXISTS gold.fact_order CASCADE;
CREATE TABLE gold.fact_order (
    order_sk              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    date_purchase_sk      INTEGER NOT NULL REFERENCES gold.dim_date (date_sk),
    date_approved_sk      INTEGER REFERENCES gold.dim_date (date_sk),
    date_delivered_sk     INTEGER REFERENCES gold.dim_date (date_sk),
    date_estimated_sk     INTEGER REFERENCES gold.dim_date (date_sk),
    customer_sk           INTEGER NOT NULL REFERENCES gold.dim_customer (customer_sk),
    geo_customer_sk       INTEGER REFERENCES gold.dim_geography (geo_sk),
    order_status_sk       INTEGER NOT NULL REFERENCES gold.dim_order_status (order_status_sk),
    order_id              VARCHAR(64) NOT NULL,
    order_item_count      INTEGER,
    order_gmv             NUMERIC(14, 2),
    order_freight         NUMERIC(14, 2),
    order_payment_total   NUMERIC(14, 2),
    approval_hours        NUMERIC(12, 2),
    delivery_days         NUMERIC(12, 2),
    estimated_days        NUMERIC(12, 2),
    delay_days            NUMERIC(12, 2),
    is_delivered          SMALLINT NOT NULL DEFAULT 0,
    is_on_time            SMALLINT,
    etl_loaded_at         TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_fact_order_id UNIQUE (order_id)
);

CREATE INDEX idx_fact_order_date ON gold.fact_order (date_purchase_sk);
CREATE INDEX idx_fact_order_customer ON gold.fact_order (customer_sk);

INSERT INTO gold.fact_order (
    date_purchase_sk, date_approved_sk, date_delivered_sk, date_estimated_sk,
    customer_sk, geo_customer_sk, order_status_sk, order_id,
    order_item_count, order_gmv, order_freight, order_payment_total,
    approval_hours, delivery_days, estimated_days, delay_days,
    is_delivered, is_on_time
)
SELECT
    COALESCE(TO_CHAR(m.order_purchase_timestamp::DATE, 'YYYYMMDD')::INTEGER, -1),
    CASE WHEN m.order_approved_at IS NOT NULL
         THEN TO_CHAR(m.order_approved_at::DATE, 'YYYYMMDD')::INTEGER END,
    CASE WHEN m.order_delivered_customer_date IS NOT NULL
         THEN TO_CHAR(m.order_delivered_customer_date::DATE, 'YYYYMMDD')::INTEGER END,
    CASE WHEN m.order_estimated_delivery_date IS NOT NULL
         THEN TO_CHAR(m.order_estimated_delivery_date::DATE, 'YYYYMMDD')::INTEGER END,
    m.customer_sk,
    COALESCE(dc.geo_sk, -1),
    m.order_status_sk,
    m.order_id,
    COALESCE(i.item_cnt, 0),
    COALESCE(i.gmv, 0),
    COALESCE(i.freight, 0),
    COALESCE(p.pay_total, 0),
    EXTRACT(EPOCH FROM (m.order_approved_at - m.order_purchase_timestamp)) / 3600.0,
    EXTRACT(EPOCH FROM (m.order_delivered_customer_date - m.order_purchase_timestamp)) / 86400.0,
    EXTRACT(EPOCH FROM (m.order_estimated_delivery_date - m.order_purchase_timestamp)) / 86400.0,
    EXTRACT(EPOCH FROM (m.order_delivered_customer_date - m.order_estimated_delivery_date)) / 86400.0,
    CASE WHEN m.order_status = 'delivered' THEN 1 ELSE 0 END,
    CASE
        WHEN m.order_delivered_customer_date IS NULL OR m.order_estimated_delivery_date IS NULL THEN NULL
        WHEN m.order_delivered_customer_date::DATE <= m.order_estimated_delivery_date::DATE THEN 1
        ELSE 0
    END
FROM gold.vw_order_customer_map m
LEFT JOIN gold.dim_customer dc ON m.customer_sk = dc.customer_sk
LEFT JOIN (
    SELECT order_id,
           COUNT(*) AS item_cnt,
           SUM(price) AS gmv,
           SUM(freight_value) AS freight
    FROM bronze.stg_order_items
    GROUP BY order_id
) i ON m.order_id = i.order_id
LEFT JOIN (
    SELECT order_id, SUM(payment_value) AS pay_total
    FROM bronze.stg_order_payments
    GROUP BY order_id
) p ON m.order_id = p.order_id;

-- ---------- fact_order_item ----------
DROP TABLE IF EXISTS gold.fact_order_item CASCADE;
CREATE TABLE gold.fact_order_item (
    order_item_sk           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    date_purchase_sk        INTEGER NOT NULL REFERENCES gold.dim_date (date_sk),
    date_shipping_limit_sk  INTEGER REFERENCES gold.dim_date (date_sk),
    date_delivered_sk       INTEGER REFERENCES gold.dim_date (date_sk),
    customer_sk             INTEGER NOT NULL REFERENCES gold.dim_customer (customer_sk),
    product_sk              INTEGER NOT NULL REFERENCES gold.dim_product (product_sk),
    seller_sk               INTEGER NOT NULL REFERENCES gold.dim_seller (seller_sk),
    geo_customer_sk         INTEGER REFERENCES gold.dim_geography (geo_sk),
    geo_seller_sk           INTEGER REFERENCES gold.dim_geography (geo_sk),
    order_status_sk         INTEGER NOT NULL REFERENCES gold.dim_order_status (order_status_sk),
    order_id                VARCHAR(64) NOT NULL,
    order_item_id           INTEGER NOT NULL,
    price                   NUMERIC(12, 2) NOT NULL,
    freight_value           NUMERIC(12, 2) NOT NULL,
    item_total              NUMERIC(12, 2) NOT NULL,
    is_delivered            SMALLINT NOT NULL DEFAULT 0,
    delivery_days           NUMERIC(12, 2),
    is_late                 SMALLINT,
    etl_loaded_at           TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_fact_order_item UNIQUE (order_id, order_item_id)
);

CREATE INDEX idx_foi_date ON gold.fact_order_item (date_purchase_sk);
CREATE INDEX idx_foi_product ON gold.fact_order_item (product_sk);
CREATE INDEX idx_foi_seller ON gold.fact_order_item (seller_sk);
CREATE INDEX idx_foi_customer ON gold.fact_order_item (customer_sk);

INSERT INTO gold.fact_order_item (
    date_purchase_sk, date_shipping_limit_sk, date_delivered_sk,
    customer_sk, product_sk, seller_sk, geo_customer_sk, geo_seller_sk,
    order_status_sk, order_id, order_item_id,
    price, freight_value, item_total,
    is_delivered, delivery_days, is_late
)
SELECT
    COALESCE(TO_CHAR(m.order_purchase_timestamp::DATE, 'YYYYMMDD')::INTEGER, -1),
    CASE WHEN oi.shipping_limit_date IS NOT NULL
         THEN TO_CHAR(oi.shipping_limit_date::DATE, 'YYYYMMDD')::INTEGER END,
    CASE WHEN m.order_delivered_customer_date IS NOT NULL
         THEN TO_CHAR(m.order_delivered_customer_date::DATE, 'YYYYMMDD')::INTEGER END,
    m.customer_sk,
    COALESCE(dp.product_sk, -1),
    COALESCE(ds.seller_sk, -1),
    COALESCE(dc.geo_sk, -1),
    COALESCE(ds.geo_sk, -1),
    m.order_status_sk,
    oi.order_id,
    oi.order_item_id,
    oi.price,
    oi.freight_value,
    oi.price + oi.freight_value,
    CASE WHEN m.order_status = 'delivered' THEN 1 ELSE 0 END,
    EXTRACT(EPOCH FROM (m.order_delivered_customer_date - m.order_purchase_timestamp)) / 86400.0,
    CASE
        WHEN m.order_delivered_customer_date IS NULL OR m.order_estimated_delivery_date IS NULL THEN NULL
        WHEN m.order_delivered_customer_date::DATE > m.order_estimated_delivery_date::DATE THEN 1
        ELSE 0
    END
FROM bronze.stg_order_items oi
JOIN gold.vw_order_customer_map m ON oi.order_id = m.order_id
LEFT JOIN gold.dim_product dp ON oi.product_id = dp.product_id
LEFT JOIN gold.dim_seller ds ON oi.seller_id = ds.seller_id
LEFT JOIN gold.dim_customer dc ON m.customer_sk = dc.customer_sk;

-- ---------- fact_payment ----------
DROP TABLE IF EXISTS gold.fact_payment CASCADE;
CREATE TABLE gold.fact_payment (
    payment_sk            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    date_purchase_sk      INTEGER NOT NULL REFERENCES gold.dim_date (date_sk),
    customer_sk           INTEGER NOT NULL REFERENCES gold.dim_customer (customer_sk),
    payment_type_sk       INTEGER NOT NULL REFERENCES gold.dim_payment_type (payment_type_sk),
    geo_customer_sk       INTEGER REFERENCES gold.dim_geography (geo_sk),
    order_id              VARCHAR(64) NOT NULL,
    payment_sequential    INTEGER NOT NULL,
    payment_installments  INTEGER,
    payment_value         NUMERIC(12, 2) NOT NULL,
    etl_loaded_at         TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_fact_payment UNIQUE (order_id, payment_sequential)
);

CREATE INDEX idx_fp_date ON gold.fact_payment (date_purchase_sk);
CREATE INDEX idx_fp_type ON gold.fact_payment (payment_type_sk);

INSERT INTO gold.fact_payment (
    date_purchase_sk, customer_sk, payment_type_sk, geo_customer_sk,
    order_id, payment_sequential, payment_installments, payment_value
)
SELECT
    COALESCE(TO_CHAR(m.order_purchase_timestamp::DATE, 'YYYYMMDD')::INTEGER, -1),
    m.customer_sk,
    COALESCE(dpt.payment_type_sk, -1),
    COALESCE(dc.geo_sk, -1),
    pay.order_id,
    pay.payment_sequential,
    pay.payment_installments,
    pay.payment_value
FROM bronze.stg_order_payments pay
JOIN gold.vw_order_customer_map m ON pay.order_id = m.order_id
LEFT JOIN gold.dim_payment_type dpt ON pay.payment_type = dpt.payment_type
LEFT JOIN gold.dim_customer dc ON m.customer_sk = dc.customer_sk;

-- ---------- fact_review ----------
DROP TABLE IF EXISTS gold.fact_review CASCADE;
CREATE TABLE gold.fact_review (
    review_sk          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    date_review_sk     INTEGER NOT NULL REFERENCES gold.dim_date (date_sk),
    date_purchase_sk   INTEGER REFERENCES gold.dim_date (date_sk),
    customer_sk        INTEGER NOT NULL REFERENCES gold.dim_customer (customer_sk),
    geo_customer_sk    INTEGER REFERENCES gold.dim_geography (geo_sk),
    order_id           VARCHAR(64) NOT NULL,
    review_id          VARCHAR(64) NOT NULL,
    review_score       SMALLINT NOT NULL,
    has_comment        SMALLINT NOT NULL DEFAULT 0,
    response_hours     NUMERIC(12, 2),
    etl_loaded_at      TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_fact_review UNIQUE (review_id)
);

CREATE INDEX idx_fr_date ON gold.fact_review (date_review_sk);
CREATE INDEX idx_fr_score ON gold.fact_review (review_score);

INSERT INTO gold.fact_review (
    date_review_sk, date_purchase_sk, customer_sk, geo_customer_sk,
    order_id, review_id, review_score, has_comment, response_hours
)
SELECT
    COALESCE(TO_CHAR(r.review_creation_date::DATE, 'YYYYMMDD')::INTEGER, -1),
    CASE WHEN m.order_purchase_timestamp IS NOT NULL
         THEN TO_CHAR(m.order_purchase_timestamp::DATE, 'YYYYMMDD')::INTEGER END,
    COALESCE(m.customer_sk, -1),
    COALESCE(dc.geo_sk, -1),
    r.order_id,
    r.review_id,
    r.review_score,
    CASE
        WHEN COALESCE(NULLIF(TRIM(r.review_comment_title), ''), NULLIF(TRIM(r.review_comment_message), '')) IS NOT NULL
        THEN 1 ELSE 0
    END,
    EXTRACT(EPOCH FROM (r.review_answer_timestamp - r.review_creation_date)) / 3600.0
FROM bronze.stg_order_reviews r
LEFT JOIN gold.vw_order_customer_map m ON r.order_id = m.order_id
LEFT JOIN gold.dim_customer dc ON m.customer_sk = dc.customer_sk;
